<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.m1.iot.carpool.SignInActivity"
    android:background="@drawable/gradient2">

        <ImageView
            android:id="@+id/uniride_logo"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="75dp"
            android:adjustViewBounds="false"
            android:src="@drawable/app_icon" />

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ellipsize="end"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_user_outline"
            android:layout_below="@id/uniride_logo" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ellipsize="end"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginBottom="25dp"
            android:drawableLeft="@drawable/ic_user_password"
            android:layout_below="@id/field_email"/>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signup2"
            android:layout_alignStart="@+id/signup2"
            android:layout_below="@+id/field_password"
            android:drawableLeft="@drawable/ic_navigation_check_24"
            android:text="@string/sign_in"
            android:background="@drawable/button_login"/>

        <TextView
            android:id="@+id/have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't Have an account?"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/signup2"
            android:layout_margin="10dp"
            android:textColor="@color/primary_text"/>

        <Button
            android:id="@+id/signup2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:background="@drawable/button_login"/>

</RelativeLayout>