<resources>
    <string name="app_name">Dynamic Carpool</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">••••••</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="driver_post_button_title">Offer New Carpool</string>
    <string name="rider_post_button_title">Request New Carpool</string>
    <string name="driver_feed_title">Ride Requests</string>
    <string name="rider_feed_title">Drive Offers</string>
    <string name="post_label_from">From</string>
...
