<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.m1.iot.carpool.NewPostActivity">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:fillColor="@color/primaryWhite"
        app:pageColor="#00000000"
        app:radius="5dp"
        app:slideInterval="3000"
        app:strokeColor="@color/primaryWhite"
        app:strokeWidth="2dp"
        app:autoPlay= "false"
        app:indicatorGravity="top|right"
        app:indicatorMarginHorizontal="5dp"
        app:indicatorMarginVertical="20dp"
        app:indicatorOrientation = "vertical"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_navigation_check_24"
        android:visibility="gone"/>

</RelativeLayout>