...
        android:background="@color/gradient1"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/carousel_title"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            style="@style/post_title"/>

        <TextView
            android:id="@+id/post_carousel_label"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/post_label_to"
...
